@@ -1,3 +1,10 @@
+2013-01-02  Jason Merrill  <jason@redhat.com>
+
+	PR c++/55032
+	PR c++/55245
+	* tree.c (build_cplus_array_type): Copy layout information
+	to main variant if necessary.
+
 2012-12-19  Jason Merrill  <jason@redhat.com>
 
 	PR c++/55724
