@@ -1,3 +1,8 @@
+2013-01-02  Jason Merrill  <jason@redhat.com>
+
+	PR c++/55804
+	* tree.c (build_array_type_1): Revert earlier change.
+
 2012-12-25  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	PR target/53789
